--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "qdrant-client>=1.12.0",
     "pydantic>=2.10.6",
     "fastmcp>=2.5.1",
+    "google-genai>=1.0.0",
 ]
 
 [build-system]
