--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,4 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
