Fix Docker networking and workflow issues - Add host/port configuration support in main.py - Fix branch reference logic in docker-build workflow - Update Dockerfile default branch to dev - Now Docker container properly binds to 0.0.0.0:8000 and is accessible externally

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -53,8 +53,12 @@ jobs:
         run: |
           if [[ $GITHUB_REF == refs/tags/v* ]]; then
             echo "ref=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-          elif [[ $GITHUB_REF == refs/heads/main ]] || [[ $GITHUB_REF == refs/heads/master ]]; then
+          elif [[ $GITHUB_REF == refs/heads/main ]]; then
             echo "ref=main" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF == refs/heads/master ]]; then
+            echo "ref=master" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF == refs/heads/dev ]]; then
+            echo "ref=dev" >> $GITHUB_OUTPUT
           else
             echo "ref=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
           fi
