--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,10 +1,6 @@
 # Multi-stage build for optimized image
 FROM python:3.11-slim as builder
 
-# Build arguments for version control
-ARG PACKAGE_REF=dev
-ARG PACKAGE_REPO=https://github.com/AndrzejOlender/mcp-server-qdrant.git
-
 WORKDIR /app
 
 # Install git and uv for package management
@@ -17,9 +13,11 @@ RUN uv venv /opt/venv
 # Make sure we use the virtual environment
 ENV PATH="/opt/venv/bin:$PATH"
 
-# Install the mcp-server-qdrant package from GitHub
-RUN echo "Installing from: ${PACKAGE_REPO}@${PACKAGE_REF}" && \
-    uv pip install --no-cache-dir "git+${PACKAGE_REPO}@${PACKAGE_REF}"
+# Copy local source code
+COPY . .
+
+# Install the package from local source
+RUN uv pip install --no-cache-dir .
 
 # Production stage
 FROM python:3.11-slim as production
@@ -65,5 +63,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
   CMD curl -f http://127.0.0.1:8000/health || exit 1
 
 # Run the server with SSE transport
-CMD ["mcp-server-qdrant", "--transport", "sse"]
-
+CMD ["mcp-server-qdrant", "--transport", "sse"] 
