Update docker-build workflow to trigger only on 'dev' branch pushes, removing support for 'main' and 'master' branches. This change streamlines the build process for development purposes.

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -3,11 +3,9 @@ name: Build and Push Docker Image
 on:
   workflow_dispatch:
   push:
-    branches: [main, master, dev]
+    branches: [dev]
     tags:
       - 'v*'
-  pull_request:
-    branches: [main, master]
 
 env:
   REGISTRY: ghcr.io
