Adding additional files field and updating tests.

--- a/examples/custom_model_example.env
+++ b/examples/custom_model_example.env
@@ -21,5 +21,8 @@ EMBEDDING_CUSTOM_NORMALIZATION=true
 EMBEDDING_CUSTOM_VECTOR_DIMENSION=384
 EMBEDDING_CUSTOM_MODEL_FILE=onnx/model.onnx
 
+# Additional files to download (comma-separated)
+# EMBEDDING_CUSTOM_ADDITIONAL_FILES=tokenizer.json,config.json,special_tokens_map.json
+
 # Alternative: Use a direct URL instead of HuggingFace
 # EMBEDDING_CUSTOM_MODEL_URL=https://myserver.com/models/my-model.tar.gz
